algunos cambios pequeños

--- a/05 - Dictionaries/dictionaries.ipynb
+++ b/05 - Dictionaries/dictionaries.ipynb
@@ -395,15 +395,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "life_exp = {1900:48.1, 1920:56.6, 1940:64.0, 1960:71.0, 1980:75.2, 2000:79.2}\n",
+    "len(life_exp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -420,15 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "life_exp = {1900:48.1, 1920:56.6, 1940:64.0, 1960:71.0, 1980:75.2, 2000:79.2}\n",
+    "type(life_exp.keys())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -443,15 +471,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "life_exp = {1900:48.1, 1920:56.6, 1940:64.0, 1960:71.0, 1980:75.2, 2000:79.2}\n",
+    "type(life_exp.values())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -473,7 +515,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "life_exp = {1900:48.1, 1920:56.6, 1940:64.0, 1960:71.0, 1980:75.2, 2000:79.2}\n",
+    "a=life_exp.items()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -513,15 +558,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1980 in life_exp,1800 in life_exp) # True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -544,15 +599,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32.7, 32.6, 33.8, 46.9, 58.0, 68.7]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intl_life_exp = {'Canada':[48.1, 56.6, 64.0, 71.0, 75.2, 79.2],\n",
+    "                   'Denmark':[51.3, 57.5, 66.1, 72.0, 74.2, 77.0],\n",
+    "                   'Egypt':[32.7, 32.6, 33.8, 46.9, 58.0, 68.7]\n",
+    "                  }\n",
+    "intl_life_exp['Egypt']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -571,15 +643,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57.5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intl_life_exp['Denmark'][1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -602,15 +687,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1900: 32.7, 1920: 32.6, 1940: 33.8, 1980: 58.0}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intl_life_exp = {'Canada':{1900:48.1, 1920:56.6, 1940:64.0, 1960:71.0, 1980:75.2, 2000:79.2},\n",
+    "                   'Denmark':{1900:51.3, 1920:57.5, 1940:66.1},\n",
+    "                   'Egypt':{1900:32.7, 1920:32.6, 1940:33.8, 1980:58.0}\n",
+    "                  }\n",
+    "intl_life_exp['Egypt']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -626,15 +728,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intl_life_exp['Denmark'][1940]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -695,15 +810,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "['Friday', 'Monday', 'Saturday', 'Sunday', 'Thursday', 'Tuesday', 'Wednesday']\n"
+     ]
+    }
+   ],
+   "source": [
+    "week1 = {\"Monday\":1, \"Tuesday\":2, \"Wednesday\":3, \"Thursday\":4, \"Friday\":5, \"Saturday\":6, \"Sunday\":7}\n",
+    "week2 = {1:\"Monday\", 2:\"Tuesday\", 3:\"Wednesday\", 4:\"Thursday\", 5:\"Friday\", 6:\"Saturday\", 7:\"Sunday\"}\n",
+    "print(sorted(week1.values()))\n",
+    "print(sorted(week2.values()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -742,15 +871,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Tuesday': 2,\n",
+       " 'Wednesday': 3,\n",
+       " 'Thursday': 4,\n",
+       " 'Friday': 5,\n",
+       " 'Saturday': 6,\n",
+       " 'Sunday': 7}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week1.pop(\"Monday\")\n",
+    "week1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -861,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
