--- a/06 - for Loops/for-loops.ipynb
+++ b/06 - for Loops/for-loops.ipynb
@@ -229,10 +229,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n",
+      "Sunday\n"
+     ]
+    }
+   ],
+   "source": [
+    "week = {\"Monday\":1, \"Tuesday\":2, \"Wednesday\":3, \"Thursday\":4, \"Friday\":5, \"Saturday\":6, \"Sunday\":7}\n",
+    "for e in week.keys():\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,10 +266,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "U\n",
+      "R\n",
+      "G\n",
+      "E\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in 'SURGE':\n",
+    "    print(c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -334,10 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'range'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(range(10)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -461,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,10 +529,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(t)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda t: round(t * 1000)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -533,10 +589,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x748fc9fe3a60>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_ms = map(lambda t: round(t * 1000), \n",
+    "              time_sec)\n",
+    "time_ms"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -552,10 +623,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'map'>\n",
+      "<map object at 0x748fc9fe3a60>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(time_ms))\n",
+    "print(time_ms)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -573,10 +656,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[199, 1355, 813, 1809, 789, 1402, 396, 1917, 1075, 1022]\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_ms = list(map(lambda t: round(t * 1000), \n",
+    "                   time_sec))\n",
+    "\n",
+    "print(time_ms)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -647,10 +743,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "palindromes\n"
+     ]
+    }
+   ],
+   "source": [
+    "original = 'semordnilap'\n",
+    "result = ''\n",
+    "for char in original:\n",
+    "    result = char + result\n",
+    "\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -676,10 +787,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "\n",
+    "for word in ['red', 'green', 'blue']:\n",
+    "    total += len(word)\n",
+    "\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -753,10 +879,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RGB\n"
+     ]
+    }
+   ],
+   "source": [
+    "acr = \"\"\n",
+    "for word in [\"red\",\"green\",\"blue\"]:\n",
+    "    acr += word[0].upper()\n",
+    "\n",
+    "print(acr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -845,7 +985,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -859,7 +999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
