--- a/01 - Variables and Assignment/variables-and-assignment.ipynb
+++ b/01 - Variables and Assignment/variables-and-assignment.ipynb
@@ -413,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -427,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
