--- a/03 - Python Built-Ins/built-in.ipynb
+++ b/03 - Python Built-Ins/built-in.ipynb
@@ -509,7 +509,15 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tin\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -577,7 +585,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -591,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
